--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="container my-4">
         <h1 class="mb-3">Breast Pathology Calculators</h1>
         <p class="lead">
-            This website provides a suite of breast cancer risk and pathology calculators intended for use by healthcare professionals only.
+            This website provides a suite of breast cancer risk and pathology calculators intended for use by healthcare professionals.
         </p>
 
         <!-- CALCULATORS FREQUENTLY USED BY PATHOLOGISTS -->
@@ -61,7 +61,7 @@
                 <div class="card h-100 shadow-sm">
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title">Magee Equations Calculator</h5>
-                        <p class="card-text flex-grow-1">Estimate Oncotype DX recurrence score using pathology data. Contains all information from the UPMC Magee Equations webpage.</p>
+                        <p class="card-text flex-grow-1">Estimate Oncotype DX recurrence score using pathology data.</p>
                         <a href="magee.html" class="btn btn-primary mt-auto">Open Calculator</a>
                     </div>
                 </div>
@@ -71,7 +71,7 @@
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title">H-score Calculator</h5>
                         <p class="card-text flex-grow-1">
-                            Calculates the semi-quantitative immunohistochemical H-score for ER, PR, or other stains. The H-score is the sum of the percent staining multiplied by intensity (0–3). Range: 0–300.
+                            Calculates the semi-quantitative immunohistochemical H-score for ER, PR, or other stains. The H-score is the sum of the percent staining multiplied by intensity.
                         </p>
                         <a href="hscore.html" class="btn btn-primary mt-auto">Open Calculator</a>
                     </div>
@@ -144,7 +144,7 @@
                         <p class="card-text flex-grow-1">
                             BCSC calculator for estimating 6-year cumulative risk of developing advanced breast cancer.
                         </p>
-                        <a href="https://tools.bcsc-scc.org/BC5yearRisk/bc_risk_calculator.htm" class="btn btn-primary mt-auto" target="_blank" rel="noopener">External Link</a>
+                        <a href="https://tools.bcsc-scc.ucdavis.edu/BC5yearRisk/#/" class="btn btn-primary mt-auto" target="_blank" rel="noopener">External Link</a>
                     </div>
                 </div>
             </div>
@@ -187,7 +187,7 @@
                         <p class="card-text flex-grow-1">
                             Suite of breast cancer calculators from MD Anderson Cancer Center.
                         </p>
-                        <a href="https://www.mdanderson.org/research/research-resources/clinical-tools-and-resources/clinical-calculators.html" class="btn btn-primary mt-auto" target="_blank" rel="noopener">External Link</a>
+                        <a href="https://www.mdanderson.org/for-physicians/clinical-tools-resources/clinical-calculators.html" class="btn btn-primary mt-auto" target="_blank" rel="noopener">External Link</a>
                     </div>
                 </div>
             </div>
@@ -198,7 +198,7 @@
                         <p class="card-text flex-grow-1">
                             Mayo Clinic tool for risk assessment in women with benign breast disease.
                         </p>
-                        <a href="https://www.mayoclinic.org/apps/bbd-risktool" class="btn btn-primary mt-auto" target="_blank" rel="noopener">External Link</a>
+                        <a href="https://www.mayoclinic.org/breast-cancer-risk-prediction/itt-20150095#:~:text=to%20Mayo%20Clinic-,Breast%20Cancer%20Risk%20Assessment%20Tool%20for%20Women%20With%20Benign%20Breast,and%20prevention%20of%20breast%20cancer." class="btn btn-primary mt-auto" target="_blank" rel="noopener">External Link</a>
                     </div>
                 </div>
             </div>
