--- a/pepi.html
+++ b/pepi.html
@@ -92,7 +92,7 @@
                      data-bs-parent="#infoAccordion">
                     <div class="accordion-body">
                         <p>
-                            To obtain the preoperative endocrine prognostic index (PEPI) score, risk points for relapse-free survival (RFS) and breast cancer–specific survival (BCSS) are assigned depending on the hazard ratio (HR) given in the table below (from: Ellis MJ et al. J Natl Cancer Inst. 2008;100:1380-1388)[1]. The total PEPI score assigned is the sum of the risk points derived from the pT stage, pN stage, Ki67 level, and estrogen receptor (ER) status of the surgical specimen. A hazard ratio in the range of 1–2 receives one risk point; a hazard ratio in the 2–2.5 range, two risk points; a hazard ratio greater than 2.5, three risk points. The total risk point score for each case is the sum of all the risk points accumulated from the four factors in the model. For example, a T1N0 tumor, Ki67 staining percentage of 1, and ER Allred score of 6 will have no risk points assigned. In contrast, a T3N1 tumor, Ki67 staining percentage of 25, and ER Allred score of 2 will have a total relapse score of 3 + 3 + 2 + 3 = 11[1].
+                            To obtain the preoperative endocrine prognostic index (PEPI) score, risk points for relapse-free survival (RFS) and breast cancer–specific survival (BCSS) are assigned depending on the hazard ratio (HR) given in the table below (from: Ellis MJ et al. J Natl Cancer Inst. 2008;100:1380-1388). The total PEPI score assigned is the sum of the risk points derived from the pT stage, pN stage, Ki67 level, and estrogen receptor (ER) status of the surgical specimen. A hazard ratio in the range of 1–2 receives one risk point; a hazard ratio in the 2–2.5 range, two risk points; a hazard ratio greater than 2.5, three risk points. The total risk point score for each case is the sum of all the risk points accumulated from the four factors in the model. For example, a T1N0 tumor, Ki67 staining percentage of 1, and ER Allred score of 6 will have no risk points assigned. In contrast, a T3N1 tumor, Ki67 staining percentage of 25, and ER Allred score of 2 will have a total relapse score of 3 + 3 + 2 + 3 = 11.
                         </p>
                         <div class="table-responsive">
                             <table class="table table-bordered align-middle">
@@ -142,13 +142,6 @@
                         <p>
                             <strong>Scoring and Interpretation:</strong><br>
                             A hazard ratio in the range of 1–2 receives 1 risk point; a hazard ratio in the 2–2.5 range, 2 risk points; a hazard ratio greater than 2.5, 3 risk points. Best prognosis for PEPI score of 0; Intermediate for PEPI score of 1–3; Worse prognosis for PEPI score of 4 or higher[1].
-                        </p>
-                        <pre class="bg-light p-3">
-Example 1: T1N0, Ki67 = 1%, ER Allred = 6 → PEPI = 0
-Example 2: T3N1, Ki67 = 25%, ER Allred = 2 → PEPI = 3 (T) + 3 (N) + 2 (Ki67) + 3 (ER) = 11
-                        </pre>
-                        <p>
-                            Reference: <a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC2556704/" target="_blank">Ellis MJ et al., J Natl Cancer Inst. 2008</a>
                         </p>
                     </div>
                 </div>
