--- a/pepi.html
+++ b/pepi.html
@@ -85,7 +85,7 @@
                 <h2 class="accordion-header">
                     <button class="accordion-button" type="button" data-bs-toggle="collapse"
                             data-bs-target="#infoCollapse" aria-expanded="true">
-                        More information
+                        Summary
                     </button>
                 </h2>
                 <div id="infoCollapse" class="accordion-collapse collapse show"
