--- a/npi.html
+++ b/npi.html
@@ -1,92 +1,216 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nottingham Prognostic Index Calculator</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: linear-gradient(to bottom, #fdeef3, #f9dfe8);
-      padding: 40px;
-      max-width: 700px;
-      margin: auto;
-    }
-    h1 {
-      text-align: center;
-    }
-    label {
-      display: block;
-      margin: 15px 0 5px;
-    }
-    input, select {
-      width: 100%;
-      padding: 8px;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-    }
-    button {
-      margin-top: 20px;
-      padding: 10px;
-      width: 100%;
-      font-size: 16px;
-      background-color: #007bff;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-    }
-    .result {
-      margin-top: 20px;
-      font-weight: bold;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nottingham Prognostic Index (NPI) Calculator</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            background: #f6f8fa;
+        }
+        .calculator-container { 
+            max-width: 800px; 
+            margin: 2rem auto; 
+            padding: 20px; 
+        }
+        .form-group { 
+            margin-bottom: 1.2rem; 
+        }
+        .result-alert { 
+            display: none; 
+            margin-top: 1.5rem; 
+        }
+        input[type="number"], select { 
+            max-width: 200px; 
+        }
+        .accordion-button:not(.collapsed) { 
+            color: #0d6efd; 
+            background-color: #e7f1ff; 
+        }
+        .table th, .table td {
+            vertical-align: middle;
+            text-align: center;
+        }
+        pre.bg-light { 
+            white-space: pre-wrap; 
+        }
+    </style>
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary bg-gradient mb-4">
+        <div class="container-fluid">
+            <a class="navbar-brand fw-bold" href="index.html">Home</a>
+        </div>
+    </nav>
 
-<nav>
-  <a href="index.html">Home</a>
-  <a href="magee.html">Magee</a>
-  <a href="hscore.html">H-Score</a>
-  <a href="npi.html">NPI</a>
-  <a href="pepi.html">PEPI</a>
-</nav>
+    <div class="calculator-container">
+        <h2>Nottingham Prognostic Index (NPI) Calculator</h2>
+        <p>
+            Calculates the Nottingham Prognostic Index (NPI) for breast cancer using tumor size, lymph node status, and grade. The NPI provides prognostic stratification based on historical outcome data.
+        </p>
+        
+        <form id="npiForm">
+            <div class="form-group">
+                <label>Tumor Size (cm):</label>
+                <input type="number" class="form-control" id="tumorSize" min="0.1" max="20" step="0.1" required>
+            </div>
+            <div class="form-group">
+                <label>Lymph Node Status:</label>
+                <select class="form-control" id="nodeStatus" required>
+                    <option value="">Select...</option>
+                    <option value="1">Negative nodes</option>
+                    <option value="2">1–3 positive nodes</option>
+                    <option value="3">&gt;3 positive nodes</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label>Histologic Grade (1–3):</label>
+                <input type="number" class="form-control" id="grade" min="1" max="3" step="1" required>
+            </div>
+            <button type="button" class="btn btn-primary" onclick="calculateNPI()">Calculate</button>
+            <button type="button" class="btn btn-outline-secondary ms-2" onclick="window.open('https://www.mdcalc.com/calc/1035/nottingham-prognostic-index-npi-breast-cancer', '_blank')">More Information</button>
+        </form>
 
-  <h1>Nottingham Prognostic Index Calculator</h1>
-  <p>The NPI estimates 10-year survival using tumor size, nodal status, and tumor grade.</p>
-  <label>Tumor Size (cm):</label>
-  <input type="number" id="tumorSize" min="0" step="0.1">
-  <label>Nodal Status:</label>
-  <select id="nodes">
-    <option value="1">Negative (0 nodes)</option>
-    <option value="2">1–3 Positive Nodes</option>
-    <option value="3">>3 Positive Nodes</option>
-  </select>
-  <label>Tumor Grade (1–3):</label>
-  <input type="number" id="grade" min="1" max="3">
-  <button onclick="calculateNPI()">Calculate NPI</button>
-  <div class="result" id="result">
-<div style="margin-top: 15px;">
-  <a href="https://pubmed.ncbi.nlm.nih.gov/" target="_blank"
-     style="display:inline-block; padding: 8px 14px; font-size: 14px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none;">
-    More Information
-  </a>
-</div>
+        <div class="result-alert alert alert-primary" role="alert">
+            <h4>NPI Score: <span id="npiResult">-</span></h4>
+            <p class="mb-0" id="npiGroup"></p>
+        </div>
 
-</div>
-  <script>
-    function calculateNPI() {
-      const size = parseFloat(document.getElementById('tumorSize').value);
-      const nodes = parseInt(document.getElementById('nodes').value);
-      const grade = parseInt(document.getElementById('grade').value);
-      if (isNaN(size) || isNaN(nodes) || isNaN(grade)) {
-        document.getElementById('result').innerText = 'Please complete all fields.';
-        return;
-      }
-      const score = (0.2 * size) + nodes + grade;
-      document.getElementById('result').innerText = 'NPI Score:<a href='https://pubmed.ncbi.nlm.nih.gov/' target='_blank' style='color:#007bff; font-weight: normal; margin-left: 8px;'>Learn more</a> ' + score.toFixed(2);
-    }
-  document.getElementById('result').innerText = 'NPI result';
-</script>
+        <div class="accordion mt-4" id="infoAccordion">
+            <div class="accordion-item">
+                <h2 class="accordion-header">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#infoCollapse" aria-expanded="true">
+                        More information
+                    </button>
+                </h2>
+                <div id="infoCollapse" class="accordion-collapse collapse show"
+                     data-bs-parent="#infoAccordion">
+                    <div class="accordion-body">
+                        <p>
+                            <strong>Significance of NPI:</strong> The Nottingham Prognostic Index (NPI) is a validated tool for stratifying breast cancer prognosis based on tumor size, lymph node status, and histologic grade. The table below shows the prognostic value of NPI in two time periods: 1980–1986 (no adjuvant systemic treatment) and 1990–1999 (systemic adjuvant treatment given)[1].
+                        </p>
+                        <div class="table-responsive">
+                            <table class="table table-bordered align-middle">
+                                <thead class="table-light">
+                                    <tr>
+                                        <th>Group</th>
+                                        <th>NPI</th>
+                                        <th colspan="2">1980–1986*</th>
+                                        <th colspan="2">1990–1999**</th>
+                                    </tr>
+                                    <tr>
+                                        <th></th>
+                                        <th></th>
+                                        <th>Proportion (%)</th>
+                                        <th>10-year survival (%)</th>
+                                        <th>Proportion (%)</th>
+                                        <th>10-year survival (%)</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>Excellent</td>
+                                        <td>2.02–2.4</td>
+                                        <td>12</td>
+                                        <td>88</td>
+                                        <td>15</td>
+                                        <td>96</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Good</td>
+                                        <td>2.41–3.4</td>
+                                        <td>19</td>
+                                        <td>72</td>
+                                        <td>21</td>
+                                        <td>93</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Moderate 1</td>
+                                        <td>3.41–4.4</td>
+                                        <td>29</td>
+                                        <td>61</td>
+                                        <td>28</td>
+                                        <td>81</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Moderate 2</td>
+                                        <td>4.41–5.4</td>
+                                        <td>24</td>
+                                        <td>42</td>
+                                        <td>22</td>
+                                        <td>74</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Poor</td>
+                                        <td>5.41–6.4</td>
+                                        <td>11</td>
+                                        <td>15</td>
+                                        <td>10</td>
+                                        <td>55</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Very Poor</td>
+                                        <td>6.41–6.8</td>
+                                        <td>5</td>
+                                        <td>12</td>
+                                        <td>4</td>
+                                        <td>38</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <p class="mb-1"><em>*No adjuvant systemic treatment given<br>**Systemic adjuvant treatment given</em></p>
+                        <p class="mb-0"><strong>References:</strong></p>
+                        <ul class="mb-0">
+                            <li>Lee AHS, Ellis IO. Pathol. Oncol. Res. (2008) 14:113-115.</li>
+                            <li>Balslev I, Axelsson CK, Zedeler K, Rasmussen BB, Carstensen B, Mouridsen HT (1994) The Nottingham Prognostic Index applied to 9,149 patients from the studies of the Danish Breast Cancer Cooperative Group (DBCG). Breast Cancer Res Treat 32:281–290.</li>
+                            <li>Brown JM, Benson EA, Jones M (1993) Confirmation of a longterm prognostic index for breast cancer. Breast 2:144–147.</li>
+                            <li>Sundquist M, Thorstenson S, Brudin L, Nordenskjold B, South East Swedish Breast Cancer Study Group (1999) Applying the Nottingham Prognostic Index to a Swedish breast cancer population. Breast Cancer Res Treat 53:1–8.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        function calculateNPI() {
+            const tumorSize = Math.min(20, Math.max(0.1, parseFloat(document.getElementById('tumorSize').value) || 0));
+            const nodeStatus = parseInt(document.getElementById('nodeStatus').value);
+            const grade = Math.min(3, Math.max(1, parseInt(document.getElementById('grade').value) || 1));
+
+            const npi = (0.2 * tumorSize) + nodeStatus + grade;
+            document.getElementById('npiResult').textContent = npi.toFixed(2);
+
+            // Determine prognostic group
+            // let group = '';
+            // if (npi >= 2.02 && npi <= 2.4) group = "Excellent prognosis";
+            // else if (npi > 2.4 && npi <= 3.4) group = "Good prognosis";
+            // else if (npi > 3.4 && npi <= 4.4) group = "Moderate 1 prognosis";
+            // else if (npi > 4.4 && npi <= 5.4) group = "Moderate 2 prognosis";
+            // else if (npi > 5.4 && npi <= 6.4) group = "Poor prognosis";
+            // else if (npi > 6.4 && npi <= 6.8) group = "Very poor prognosis";
+            // else group = "Outside validated range";
+
+            document.getElementById('npiGroup').textContent = group;
+            document.querySelector('.result-alert').style.display = 'block';
+        }
+
+        // Input validation (real-time clamping)
+        document.querySelectorAll('input[type="number"]').forEach(input => {
+            input.addEventListener('input', function() {
+                const max = parseFloat(this.max);
+                const min = parseFloat(this.min);
+                let value = parseFloat(this.value);
+                if (!isNaN(value)) {
+                    if (value > max) this.value = max;
+                    if (value < min) this.value = min;
+                }
+            });
+        });
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
