--- a/npi.html
+++ b/npi.html
@@ -69,7 +69,7 @@
                 <input type="number" class="form-control" id="grade" min="1" max="3" step="1" required>
             </div>
             <button type="button" class="btn btn-primary" onclick="calculateNPI()">Calculate</button>
-            <button type="button" class="btn btn-outline-secondary ms-2" onclick="window.open('https://www.mdcalc.com/calc/1035/nottingham-prognostic-index-npi-breast-cancer', '_blank')">More Information</button>
+            <button type="button" class="btn btn-outline-secondary ms-2" onclick="window.open('https://pmc.ncbi.nlm.nih.gov/articles/PMC8870306/', '_blank')">More Information</button>
         </form>
 
         <div class="result-alert alert alert-primary" role="alert">
@@ -82,7 +82,7 @@
                 <h2 class="accordion-header">
                     <button class="accordion-button" type="button" data-bs-toggle="collapse"
                             data-bs-target="#infoCollapse" aria-expanded="true">
-                        More information
+                        Summary
                     </button>
                 </h2>
                 <div id="infoCollapse" class="accordion-collapse collapse show"
