--- a/npi.html
+++ b/npi.html
@@ -89,7 +89,7 @@
                      data-bs-parent="#infoAccordion">
                     <div class="accordion-body">
                         <p>
-                            <strong>Significance of NPI:</strong> The Nottingham Prognostic Index (NPI) is a validated tool for stratifying breast cancer prognosis based on tumor size, lymph node status, and histologic grade. The table below shows the prognostic value of NPI in two time periods: 1980–1986 (no adjuvant systemic treatment) and 1990–1999 (systemic adjuvant treatment given)[1].
+                            <strong>Significance of NPI:</strong> The Nottingham Prognostic Index (NPI) is a validated tool for stratifying breast cancer prognosis based on tumor size, lymph node status, and histologic grade. The table below shows the prognostic value of NPI in two time periods: 1980–1986 (no adjuvant systemic treatment) and 1990–1999 (systemic adjuvant treatment given).
                         </p>
                         <div class="table-responsive">
                             <table class="table table-bordered align-middle">
