--- a/magee.html
+++ b/magee.html
@@ -17,10 +17,16 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary bg-gradient mb-4">
-    <div class="container-fluid">
+      <div class="container-fluid">
         <a class="navbar-brand fw-bold" href="index.html">Home</a>
-    </div>
-</nav>
+        <div class="d-flex flex-wrap ms-auto">
+          <a href="frequently-used.html" class="btn btn-light mx-1 my-1 fw-semibold">Frequently Used</a>
+          <a href="risk-assessment.html" class="btn btn-light mx-1 my-1 fw-semibold">Risk Assessment</a>
+          <a href="recurrence-treatment.html" class="btn btn-light mx-1 my-1 fw-semibold">Recurrence/Treatment</a>
+          <a href="other-calculators.html" class="btn btn-light mx-1 my-1 fw-semibold">Other Calculators</a>
+        </div>
+      </div>
+    </nav>
 
     <div class="calculator-container">
         <h2>Magee Equations Calculator</h2>
