--- a/frequently-used.html
+++ b/frequently-used.html
@@ -1,1 +1,113 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Frequently Used Calculators</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            background: #f6f8fa;
+        }
+        .section-title {
+            margin-top: 2.5rem;
+            margin-bottom: 1rem;
+            font-weight: bold;
+            font-size: 1.3rem;
+            color: #0d6efd;
+            letter-spacing: 0.01em;
+        }
+        .card.h-100 {
+            min-height: 275px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+        }
+        .card-title {
+            min-height: 3.5rem;
+        }
+        @media (max-width: 767px) {
+            .card.h-100 {
+                min-height: 0;
+            }
+        }
+    </style>
+</head>
+<body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary bg-gradient mb-4">
+        <div class="container-fluid">
+            <a class="navbar-brand fw-bold" href="index.html">Home</a>
+            <div class="d-flex flex-wrap ms-auto">
+                <a href="frequently-used.html" class="btn btn-light mx-1 my-1 fw-semibold">Frequently Used</a>
+                <a href="risk-assessment.html" class="btn btn-light mx-1 my-1 fw-semibold">Risk Assessment</a>
+                <a href="recurrence-treatment.html" class="btn btn-light mx-1 my-1 fw-semibold">Recurrence/Treatment</a>
+                <a href="other-calculators.html" class="btn btn-light mx-1 my-1 fw-semibold">Other Calculators</a>
+            </div>
+        </div>
+    </nav>
+
+    <div class="container my-4">
+        <h1 class="mb-3">Frequently Used Calculators</h1>
+        <p class="lead">
+            These calculators are commonly used by pathologists for breast cancer prognostication and reporting[#1].
+        </p>
+        <div class="row g-4">
+            <div class="col-md-6 col-lg-3">
+                <div class="card h-100 shadow-sm">
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title">Magee Equations Calculator</h5>
+                        <p class="card-text flex-grow-1">Estimate Oncotype DX recurrence score using pathology data. Contains all information from the UPMC Magee Equations webpage[#1].</p>
+                        <a href="magee.html" class="btn btn-primary mt-auto">Open Calculator</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="card h-100 shadow-sm">
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title">H-score Calculator</h5>
+                        <p class="card-text flex-grow-1">
+                            Calculates the semi-quantitative immunohistochemical H-score for ER, PR, or other stains. The H-score is the sum of the percent staining multiplied by intensity (0–3). Range: 0–300[#1].
+                        </p>
+                        <a href="hscore.html" class="btn btn-primary mt-auto">Open Calculator</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="card h-100 shadow-sm">
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title">Nottingham Prognostic Index Calculator</h5>
+                        <p class="card-text flex-grow-1">
+                            Calculates the Nottingham Prognostic Index (NPI) for breast cancer using tumor size, lymph node status, and grade[#1].
+                        </p>
+                        <a href="npi.html" class="btn btn-primary mt-auto">Open Calculator</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="card h-100 shadow-sm">
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title">Pre-operative Endocrine Prognostic Index (PEPI score) Calculator</h5>
+                        <p class="card-text flex-grow-1">
+                            Calculates PEPI score for those who received neoadjuvant endocrine therapy alone, based on pT stage, pN stage, Ki67 level, and ER status[#1].
+                        </p>
+                        <a href="pepi.html" class="btn btn-primary mt-auto">Open Calculator</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="card h-100 shadow-sm">
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title">Residual Cancer Burden Calculator</h5>
+                        <p class="card-text flex-grow-1">
+                            Tool for residual cancer burden assessment after neoadjuvant therapy[#1].
+                        </p>
+                        <a href="https://www.mdanderson.org/breastcancer_RCB" class="btn btn-primary mt-auto" target="_blank" rel="noopener">External Link</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
 
