--- a/risk-assessment.html
+++ b/risk-assessment.html
@@ -1,1 +1,93 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Risk Assessment Calculators</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            background: #f6f8fa;
+        }
+        .section-title {
+            margin-top: 2.5rem;
+            margin-bottom: 1rem;
+            font-weight: bold;
+            font-size: 1.3rem;
+            color: #0d6efd;
+            letter-spacing: 0.01em;
+        }
+        .card.h-100 {
+            min-height: 275px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+        }
+        .card-title {
+            min-height: 3.5rem;
+        }
+        @media (max-width: 767px) {
+            .card.h-100 {
+                min-height: 0;
+            }
+        }
+    </style>
+</head>
+<body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary bg-gradient mb-4">
+        <div class="container-fluid">
+            <a class="navbar-brand fw-bold" href="index.html">Home</a>
+            <div class="d-flex flex-wrap ms-auto">
+                <a href="frequently-used.html" class="btn btn-light mx-1 my-1 fw-semibold">Frequently Used</a>
+                <a href="risk-assessment.html" class="btn btn-light mx-1 my-1 fw-semibold active">Risk Assessment</a>
+                <a href="recurrence-treatment.html" class="btn btn-light mx-1 my-1 fw-semibold">Recurrence/Treatment</a>
+                <a href="other-calculators.html" class="btn btn-light mx-1 my-1 fw-semibold">Other Calculators</a>
+            </div>
+        </div>
+    </nav>
+
+    <div class="container my-4">
+        <h1 class="mb-3">Risk Assessment Calculators</h1>
+        <p class="lead">
+            These models are used to estimate the risk of developing breast cancer in various populations and clinical contexts[1].
+        </p>
+        <div class="row g-4">
+            <div class="col-md-6 col-lg-3">
+                <div class="card h-100 shadow-sm">
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title">Breast Cancer Risk Assessment Tool (Gail Model)</h5>
+                        <p class="card-text flex-grow-1">
+                            NCI calculator for estimating absolute risk of developing breast cancer over 5 years and lifetime[1].
+                        </p>
+                        <a href="https://bcrisktool.cancer.gov/calculator.html" class="btn btn-primary mt-auto" target="_blank" rel="noopener">External Link</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="card h-100 shadow-sm">
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title">Tyrer-Cuzick Risk Assessment Calculator</h5>
+                        <p class="card-text flex-grow-1">
+                            Tyrer-Cuzick (IBIS) risk calculator for lifetime breast cancer risk assessment[1].
+                        </p>
+                        <a href="https://magview.com/ibis-risk-calculator/" class="btn btn-primary mt-auto" target="_blank" rel="noopener">External Link</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="card h-100 shadow-sm">
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title">Breast Cancer Surveillance Consortium (BCSC) Invasive Breast Cancer Risk Calculator</h5>
+                        <p class="card-text flex-grow-1">
+                            BCSC calculator for estimating 6-year cumulative risk of developing advanced breast cancer[1].
+                        </p>
+                        <a href="https://tools.bcsc-scc.org/BC5yearRisk/bc_risk_calculator.htm" class="btn btn-primary mt-auto" target="_blank" rel="noopener">External Link</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
